--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -23,7 +23,7 @@ spec:
         - name: KAFKA_ADDRESS
           value: "kafka:9092"
         - name: VERSION
-          value: "0.0.1"
+          value: "todo"
         ports:
         - containerPort: 8080
         readinessProbe:
