[BUG] save events in DB

--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -1,4 +1,61 @@
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-backup
+  namespace: test
+spec:
+  selector:
+    app: kafka-backup
+  ports:
+  - protocol: TCP
+    port: 8080
+    targetPort: 8080
+    nodePort: 31082
+  type: NodePort
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-backup-db
+  namespace: test
+spec:
+  selector:
+    app: kafka-backup-db
+  ports:
+  - port: 5432
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: kafka-backup-db
+  namespace: test
+  labels:
+    app: kafka-backup-db
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: kafka-backup-db
+  template:
+    metadata:
+      labels:
+        app: kafka-backup-db
+    spec:
+      containers:
+      - name: kafka-backup-db
+        image: postgres:10.4
+        env:
+        - name: POSTGRES_DB
+          value: "backend"
+        - name: POSTGRES_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: kafka-backup
+              key: password
+        ports:
+        - containerPort: 5432
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -24,6 +81,36 @@ spec:
           value: "kafka:9092"
         - name: VERSION
           value: "todo"
+        - name: DB_HOST
+          value: "kafka-backup"
+        - name: DB_PORT
+          value: "5432"
+        - name: WILDFLY_USER
+          valueFrom:
+            secretKeyRef:
+              name: sink-appserver
+              key: username
+        - name: WILDFLY_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: sink-appserver
+              key: password
+        - name: JNDI_NAME
+          value: "java:jboss/jdbc/backup"
+        - name: DATASOURCE_NAME
+          value: "Kafka Backup"
+        - name: DATABASE_NAME
+          value: "backup"
+        - name: DATABASE_USER
+          valueFrom:
+            secretKeyRef:
+              name: kafka-backup
+              key: username
+        - name: DATABASE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: kafka-backup
+              key: password
         ports:
         - containerPort: 8080
         readinessProbe:
@@ -32,18 +119,3 @@ spec:
             port: 8080
           initialDelaySeconds: 5
           timeoutSeconds: 1
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: kafka-backup
-  namespace: test
-spec:
-  selector:
-    app: kafka-backup
-  ports:
-  - protocol: TCP
-    port: 8080
-    targetPort: 8080
-    nodePort: 31082
-  type: NodePort
