[BUG] use managment console to debug error

--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -12,6 +12,10 @@ spec:
     port: 8080
     targetPort: 8080
     nodePort: 31082
+  - protocol: TCP
+    port: 9990
+    targetPort: 9990
+    nodePort: 31099
   type: NodePort
 ---
 apiVersion: v1
