[BUG] use managment console to debug error

--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -8,11 +8,13 @@ spec:
   selector:
     app: kafka-backup
   ports:
-  - protocol: TCP
+  - name: app
+    protocol: TCP
     port: 8080
     targetPort: 8080
     nodePort: 31082
-  - protocol: TCP
+  - name: management
+    protocol: TCP
     port: 9990
     targetPort: 9990
     nodePort: 31099
