[BUG] correct db typo

--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -13,12 +13,6 @@ spec:
     port: 8080
     targetPort: 8080
     nodePort: 31082
-  - name: management
-    protocol: TCP
-    port: 9990
-    targetPort: 9990
-    nodePort: 31099
-  type: NodePort
 ---
 apiVersion: v1
 kind: Service
@@ -53,7 +47,7 @@ spec:
         image: postgres:10.4
         env:
         - name: POSTGRES_DB
-          value: "backend"
+          value: "backup"
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
