--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -83,7 +83,7 @@ spec:
         - name: VERSION
           value: "todo"
         - name: DB_HOST
-          value: "kafka-backup"
+          value: "kafka-backup-db"
         - name: DB_PORT
           value: "5432"
         - name: WILDFLY_USER
