[BUG] correct datasource name

--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -100,7 +100,7 @@ spec:
         - name: JNDI_NAME
           value: "java:jboss/jdbc/backup"
         - name: DATASOURCE_NAME
-          value: "Kafka Backup"
+          value: "Kafka-Backup"
         - name: DATABASE_NAME
           value: "backup"
         - name: DATABASE_USER
