[REFAC] use postgres with git

--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -46,7 +46,7 @@ spec:
     spec:
       containers:
       - name: kafka-backup-db
-        image: postgres:10.4
+        image: khinkali/postgres:0.0.1
         env:
         - name: POSTGRES_DB
           value: "backup"
