[REFAC] restore db on reboot

--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -44,6 +44,26 @@ spec:
       labels:
         app: kafka-backup-db
     spec:
+      initContainers:
+      - name: clone-repo
+        image: alpine/git:1.0.4
+        securityContext:
+          runAsUser: 1000
+        command: ["/bin/sh", "-c", "git clone https://${GIT_USERNAME}:${GIT_PASSWORD}@bitbucket.org/khinkali/kafka_backup_db_test /var/lib/postgresql/data"]
+        volumeMounts:
+        - name: postgres-data
+          mountPath: /var/lib/postgresql/data
+        env:
+        - name: GIT_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: bitbucket
+              key: username
+        - name: GIT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: bitbucket
+              key: password
       containers:
       - name: kafka-backup-db
         image: khinkali/postgres:0.0.1
@@ -57,6 +77,12 @@ spec:
               key: password
         ports:
         - containerPort: 5432
+        volumeMounts:
+        - name: postgres-data
+          mountPath: /var/lib/postgresql/data
+      volumes:
+      - name: postgres-data
+        emptyDir: {}
 ---
 apiVersion: apps/v1
 kind: Deployment
