--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -49,7 +49,7 @@ spec:
         image: alpine/git:1.0.4
         securityContext:
           runAsUser: 999
-        command: ["/bin/sh", "-c", "rm -rf /var/lib/postgresql/data && git clone https://${GIT_USERNAME}:${GIT_PASSWORD}@bitbucket.org/khinkali/kafka_backup_db_test /var/lib/postgresql/data && mkdir /var/lib/postgresql/data/{pg_tblspc,pg_twophase,pg_stat,pg_stat_tmp,pg_replslot,pg_snapshots}/ && touch /var/lib/postgresql/data/{pg_tblspc,pg_twophase,pg_stat,pg_stat_tmp,pg_replslot,pg_snapshots}/.keep"]
+        command: ["/bin/sh", "-c", "rm -rf /var/lib/postgresql/data/* && git clone https://${GIT_USERNAME}:${GIT_PASSWORD}@bitbucket.org/khinkali/kafka_backup_db_test /var/lib/postgresql/data && mkdir /var/lib/postgresql/data/{pg_tblspc,pg_twophase,pg_stat,pg_stat_tmp,pg_replslot,pg_snapshots}/ && touch /var/lib/postgresql/data/{pg_tblspc,pg_twophase,pg_stat,pg_stat_tmp,pg_replslot,pg_snapshots}/.keep"]
         volumeMounts:
         - name: postgres-data
           mountPath: /var/lib/postgresql/data
