--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -49,7 +49,7 @@ spec:
         image: alpine/git:1.0.4
         securityContext:
           runAsUser: 999
-        command: ["/bin/sh", "-c", "rm -rf /var/lib/postgresql/data/* && rm -rf /var/lib/postgresql/data/.git && ls -la /var/lib/postgresql/data/ && git clone https://${GIT_USERNAME}:${GIT_PASSWORD}@bitbucket.org/khinkali/kafka_backup_db_test /var/lib/postgresql/data && ls -la /var/lib/postgresql/data"]
+        command: ["/bin/sh", "-c", "rm -rf /var/lib/postgresql/data/* && rm -rf /var/lib/postgresql/data/.git && ls -la /var/lib/postgresql/data/ && git clone https://${GIT_USERNAME}:${GIT_PASSWORD}@bitbucket.org/khinkali/kafka_backup_db_test /var/lib/postgresql/data && ls -la /var/lib/postgresql/data && rm -rf && find . -name \".gitignore\" -type f -delete"]
         volumeMounts:
         - name: postgres-data
           mountPath: /var/lib/postgresql/data
