--- a/kubeconfig.yml
+++ b/kubeconfig.yml
@@ -77,6 +77,9 @@ spec:
               key: password
         ports:
         - containerPort: 5432
+        volumeMounts:
+        - name: postgres-data
+          mountPath: /var/lib/postgresql/data
       volumes:
       - name: postgres-data
         emptyDir: {}
